[tool.poetry]
name = "llm-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.3.7,<0.4.0"
langchain-core = ">=0.3.8,<0.4.0"
langchain-openai = ">=0.0.3"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"
langchain-neo4j = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 